# jaxloop

./: CONTRIBUTING  README.md  action_loop.py  actions.py  async_action_context.py  async_action_context_test.py  constants.py  eval_loop.py  loop.py  outer_loop.py  partition.py  partition_test.py  pipeline_loop.py  pyproject.toml  stat_loop.py  step.py  train_loop.py  types.py
docs/: Makefile  README.md
docs/source/: index.rst  jaxloop.actions.rst  jaxloop.partition.rst  jaxloop.stat_loop.rst  jaxloop.step.rst  jaxloop.train_loop.rst
examples/: resnet_dataset.py  resnet_model.py  resnet_pygrain_dataset.py  resnet_step.py  train_resnet.py  xm_launch.py
jaxloop/: __init__.py
metrics/: metrics.py  metrics_test.py
notebooks/: Jaxloop_Intermediate.ipynb  Jaxloop_Quick_Start.ipynb  Jaxloop_SimpleTrainer_Intermediate.ipynb  Jaxloop_SimpleTrainer_Quick_Start.ipynb  Jaxloop_Transformer_Training_Solution.ipynb  OSS_Guide_Writing_a_Custom_Jaxloop_Loop.ipynb
oss/: pyproject.toml
oss/docs/: requirements.txt
oss/jaxloop/: __init__.py
src/jaxloop/: action_loop.py  actions.py  actions_test.py  async_action_context_test.py  eval_loop.py  loop.py  outer_loop.py  partition.py  pipeline_loop.py  stat_loop.py  step.py  stop_handler.py  train_loop.py  types.py
step_number_writer/: README.md  local_file_step_number_writer.py  local_file_step_number_writer_test.py  step_number_writer.py
tests/: action_loop_test.py  actions_test.py  eval_loop_test.py  loop_test.py  mnist_test.py  nnx_loop_test.py  pipeline_loop_test.py  stat_loop_test.py  step_test.py
(+40 files in other folders)
