[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxloop"
version = "0.0.2"
authors = [
  { name="The jaxloop authors", email="jaxloop-team@google.com" },
]
description = "A custom training loop library for JAX."
requires-python = ">=3.8"
dependencies = ["clu"]

[tool.hatch.build]
include = [
  "jaxloop/*"
]
exclude = [
  "**/*_test.py"
]

[tool.hatch.build.targets.wheel]
packages = ["jaxloop"]

[project.urls]
Homepage = "https://github.com/google/jaxloop"
Issues = "https://github.com/google/jaxloop/issues"
